# par2dialog

./: .gitignore  Cargo.toml  README.md  release_proj.sh
.github/workflows/: release.yml
scripts/package/: PKGBUILD  par2dialog.desktop
self_updater_helper/: Cargo.toml
self_updater_helper/src/: lib.rs
src/: app.rs  main.rs  theme.rs
src/par2/: create.rs  mod.rs  repair.rs  types.rs  verify.rs
src/tabs/: batch_tab.rs  create_tab.rs  mod.rs  repair_tab.rs  settings_tab.rs  verify_tab.rs
src/util/: paths.rs
src/widgets/: file_picker.rs  mod.rs  progress.rs  status_list.rs
