[package]
name = "par2dialog"
version = "0.1.9"
edition = "2021"
description = "A modern cross-platform PAR2 GUI application built with egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atb/par2dialog"
keywords = ["par2", "error-correction", "data-recovery", "gui", "egui"]
categories = ["gui", "filesystem"]

[dependencies]
self_updater_helper = { path = "self_updater_helper" }
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
tokio = { version = "1", features = ["full"] }
rust-par2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
regex = "1"
